--- a/views/contacto.html
+++ b/views/contacto.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Keywords" lang="es"
-        content="diseño web, diseno web, portafolio web, portfolio, website design, responsive design, frontend, diseño de interfaces, diseño UI, diseño UX, maquetacion web, CSS3, FIGMA, JAVASCRIPT" />
+        content="diseño web, diseno web, portafolio web, portfolio, website design, responsive design, frontend, diseño de interfaces, diseño UI, diseño UX, maquetación web, CSS3, FIGMA, JAVASCRIPT" />
     <meta name="description" lang="es"
         content="Evelyn Bonato - Diseñadora web, conocimientos en Html, css, javascript, sass, figma, diseño de interfaces interactivas.  Responsabilidad y formacion constante." />
     <title> Evelyn - Diseñadora Web</title>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Staatliches&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -31,12 +30,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Recursive&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon.png">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+    <nav class="navbar navbar-expand-xl navbar-light bg-light">
+        <a class="navbar-brand" href="./../index.html">
             <h2 class="nombre_logo"> e<span class="letrav">v</span>elyn<span class="letrav">.</span></h2>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -45,31 +45,35 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item active">
+                <li id="home" class="nav-item">
                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li id="sobre_mi" class="nav-item">
                     <a class="nav-item nav-link mr-md-3 letra" href="./sobremi.html">Sobre mí</a>
                 </li>
-                <li class="nav-item">
+                <li id="habilidades" class="nav-item">
                     <a class="nav-item nav-link mr-md-3 letra" href="./habilidades.html">Habilidades</a>
                 </li>
-                <li class="nav-item">
+                <li id="mis_trabajos" class="nav-item">
                     <a class="nav-item nav-link mr-md-3 letra" href="./mistrabajos.html">Mis trabajos</a>
                 </li>
-                <li class="nav-item">
+                <li id="contacto" class="nav-item active">
                     <a class="nav-item nav-link mr-md-3 letra" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
-        <a class="d-none d-md-block" href="#"><i class="fab fa-behance"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-instagram"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-github"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-linkedin"></i></a>
+        <a class="d-none d-xl-block" href="https://www.behance.net/" target="_blank"><i class="fab fa-behance"></i></a>
+        <a class="d-none d-xl-block" href="https://www.instagram.com/evebonato/" target="_blank"><i
+                class="fa fa-instagram"></i></a>
+        <a class="d-none d-xl-block" href="https://github.com/evebonato" target="_blank"><i
+                class="fa fa-github"></i></a>
+        <a class="d-none d-xl-block" href="https://www.linkedin.com/in/evelyn-bonato-4246042a/" target="_blank"><i
+                class="fa fa-linkedin"></i></a>
     </nav>
 
     <h1 class="habilidades" style="text-align: center;">Contactame</h1>
     <hr>
+
     <div class="container form">
         <div class="row mt-5">
 
@@ -78,7 +82,7 @@
                     <div class="address">
                         <h4 class="formdatos">Localización
                         </h4>
-                        <p>Entre Rios - Argentina</p>
+                        <p>Entre Ríos - Argentina</p>
                     </div>
 
                     <div class="email">
@@ -91,35 +95,46 @@
                         <p>3442654856</p>
                     </div>
 
+                    <div class="email">
+                        <h4 class="formdatos">Redes sociales</h4>
+                    </div>
+                    <a href="https://www.behance.net/" target="_blank"><i class="fab fa-behance"></i></a>
+                    <a href="https://www.instagram.com/evebonato/" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://github.com/evebonato" target="_blank"><i class="fa fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/evelyn-bonato-4246042a/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+
+
                 </div>
             </div>
 
             <div class="col-lg-8 mt-5 mt-lg-0">
                 <form>
+                    <h3 class="form1">Dejáme tu consulta</h3>
                     <div class="form-row form">
                         <div class="col-md-6 mb-3 ">
-                            <input type="text" name="name" class="form-control form1" id="name" placeholder="Nombre" />
+                            <input type="text" name="name" class="form-control " id="name" placeholder="Nombre" />
 
                         </div>
                         <div class="col-md-6">
-                            <input type="email" class="form-control form1" name="email" id="email" placeholder="Mail" />
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Mail" />
 
                         </div>
                     </div>
-                    <label class="my-1 mr-2 mt-3 form1">¿En que podría ayudarte?</label>
+                    <label class="my-1 mr-2 mt-3 form1">Elige una opción:</label>
                     <select class="custom-select my-1 mr-sm-2" id="inlineFormCustomSelectPref">
                         <option selected>Presupuestos</option>
-                        <option value="1">Diseno Web</option>
+                        <option value="1">Diseño Web</option>
                         <option value="2">Wordpress</option>
                         <option value="3">Consultas generales</option>
                     </select>
                     <div class="form-group mt-4">
-                        <textarea class="form-control form1" name="message" rows="5"
-                            data-msg="Please write something for us" placeholder="Dejame tu mensaje"></textarea>
+                        <textarea class="form-control " name="message" rows="5" data-msg="Please write something for us"
+                            placeholder="Mensaje"></textarea>
                     </div>
 
                     <div class="text-center">
-                        <button type="button" class="btn btn-secondary mb-5 botoncontacto ">Enviar
+                        <button type="button" class="btn btn-secondary botoncontacto ">Enviar
                             consulta</button>
                     </div>
                 </form>
@@ -130,16 +145,12 @@
 
     </div>
 
-    </div>
-    <footer class="mt-5">
-
-        <div class="row">
-            <div class="footer-copyright text-center py-3 col-lg-12 col-md-12"> © 2020 Hecho por Evelyn <i
-                    class="fas fa-heart"></i>
-            </div>
+    <footer id="sticky-footer" class="py-4 bg-white text-black-100 footer1">
+        <div class="container text-center">
+            <medium> © 2020 Hecho por Evelyn<i class="fas fa-heart"></i></medium>
         </div>
-
     </footer>
+
 </body>
 
 </html>
