--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,322 +1,580 @@
 $color: #ffddcc;
 $secundariosecundario: black;
-$ancho :17em;
-$color1 : bisque;
+$ancho: 17em;
+$color1: bisque;
 $medidaminima: 1em;
 
 body {
-    color: black;
-    background-color: white;
+  color: black;
+  background-color: white;
 }
 
 .navbar {
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 1.50em;
-    background-color: transparent !important;
+  font-family: "Open Sans Condensed", sans-serif;
+  font-size: 1.5em;
+  background-color: transparent !important;
 
-    .navbar-center {
-        position: absolute;
-        left: 50%;
-        transform: translatex(-50%);
-    }
+  .navbar-center {
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
+  }
 
-    a {
-        color: black;
-        margin-right: $medidaminima;
-        font-size: $medidaminima;
-    }
+  a {
+    color: black;
+    margin-right: $medidaminima;
+    font-size: $medidaminima;
+  }
 
-    .nombre_logo {
-        font-family: 'Poppins', sans-serif;
-        font-size: 1.6em;
-        opacity: 0.8;
-        font-weight: bold;
-        margin-left: 0.4em;
-    }
+  .nombre_logo {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.6em;
+    opacity: 0.9;
+    font-weight: bold;
+    margin-left: 0.4em;
+  }
+
+  .iconoredes:hover {
+    color: $color;
+    opacity: 0.9;
+    border-radius: 20%;
+  }
 }
 
 .banner {
-    background-image: url(../img/imgenfondobanner.jpg);
-    background-size: cover;
-    background-position: center;
-    padding: 11em 0;
-    font-weight: lighter;
-    margin: 1.8em;
+  background-image: url(../img/imgenfondobanner.jpg);
+  background-size: cover;
+  background-position: center;
+  padding: 16em 0;
+  font-weight: lighter;
+  margin: 1.4em;
+  height: 100%;
+  width: 100%;
 
-    .banner_titulo {
-        margin: 0;
-        letter-spacing: 0.1em;
-        font-size: 3.1em;
-        margin-top: 0.2em;
-        font-family: 'Poppins', sans-serif;
-        font-weight: bold;
-        color: black;
-        opacity: 0.8;
-        padding: 0.4em;
-    }
+  .banner_titulo {
+    margin: 0;
+    letter-spacing: 0.1em;
+    font-size: 3.1em;
+    margin-top: 0.2em;
+    font-family: "Poppins", sans-serif;
+    font-weight: bold;
+    color: black;
+    opacity: 0.8;
+    padding: 0.4em;
+  }
 
-    .banner_subtitulo {
-        margin: 0;
-        margin-bottom: 0.3em;
-        letter-spacing: 0.1em;
-        font-size: 2em;
-        font-family: 'Open Sans Condensed', sans-serif;
-        opacity: 0.8;
-    }
+  .banner_subtitulo {
+    margin: 0;
+    margin-bottom: 0.3em;
+    letter-spacing: 0.1em;
+    font-size: 2em;
+    font-family: "Open Sans Condensed", sans-serif;
+    opacity: 0.8;
+  }
 
-    .banner_button {
-        font-family: 'Open Sans Condensed', sans-serif;
-        letter-spacing: 0.1em;
-        font-size: 1.5em;
-        border: none;
-        width: 8em;
-        border-radius: $medidaminima;
-        background-color: $color;
-        margin-bottom: $medidaminima;
-        color: #000;
-        border: none;
-        transition: all 0.3s ease 0s;
-        outline: none;
-        margin-top: 2em;
-    }
+  .banner_button {
+    font-family: "Open Sans Condensed", sans-serif;
+    letter-spacing: 0.1em;
+    font-size: 1.5em;
+    border: none;
+    width: 8em;
+    border-radius: $medidaminima;
+    background-color: $color;
+    margin-bottom: $medidaminima;
+    color: #000;
+    border: none;
+    transition: all 0.3s ease 0s;
+    outline: none;
+    margin-top: 2em;
+  }
 
-    .banner_button:hover {
-        color: $color;
-        transform: translateY(-7px);
-        text-decoration: none;
-    }
+  .banner_button:hover {
+    color: $color !important;
+    transform: translateY(-7px);
+    text-decoration: none;
+  }
 
-    a {
-        text-decoration: none;
-    }
+  a {
+    text-decoration: none;
+  }
+}
+
+.container {
+  font-size: 0.9em;
+  font-family: "Open Sans Condensed", sans-serif;
+  letter-spacing: 0.1em;
 }
 
 .titulosPrincipales {
-    background-color: white;
-    text-align: center;
+  background-color: white;
+  text-align: center;
 }
 
 .tituloportfolio {
+  padding: 0em;
+  background-color: white;
+  display: inline-block;
+  border-radius: 1em;
+}
+
+span {
+  img {
+    width: 22em;
+    height: 15em;
+  }
+
+  img:hover {
+    filter: opacity(0.5);
+  }
+}
+
+.imagenHabilidad {
+  width: 6em;
+  height: 6em;
+  color: gray;
+  margin-top: 6em;
+}
+
+.imagenHabilidad:hover {
+  width: 6em;
+  height: 6em;
+  color: $color;
+  margin-top: 6em;
+}
+
+.habilidades1 {
+  font-family: "Open Sans Condensed", sans-serif;
+  color: gray;
+  opacity: 0.7;
+  font-weight: bold;
+}
+
+.habilidades {
+  font-size: 2.6em;
+  margin: 0%;
+  margin-top: 1.5em;
+  color: black !important;
+  font-family: "Poppins", sans-serif;
+  opacity: 0.8;
+  font-weight: lighter;
+}
+
+.gallery {
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%;
+}
+
+.gallery .pics {
+  -webkit-transition: all 350ms ease;
+  transition: all 350ms ease;
+}
+
+.gallery .animation {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+.img-fluid {
+  margin-top: 1em;
+}
+
+.imagentrabajos {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  transition: all 300ms;
+
+  .imagen2 {
+    position: relative;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
+
+  .textoimg {
+    position: absolute;
+    background-color: gray;
+    color: white;
+    opacity: 0;
+    font-family: "Open Sans Condensed", sans-serif;
+    font-size: 0.5em;
+    padding: 1em;
+    display: block;
+    margin: 8px 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+
+  .textoimg:hover {
+    width: 100%;
+    height: 100%;
+    background-color: gray;
+    align-items: center;
+    color: white;
+    opacity: 1;
+    transform: scale(1);
+    font-size: 1.5em;
+  }
+
+  .imagentrabajos:hover {
+    transform: scale(0.15);
+    background-color: gray;
+  }
+}
+
+.form {
+  font-family: "Open Sans Condensed", sans-serif;
+  font-size: 1.4em;
+
+  .formdatos {
+    font-size: 1.4em;
+    font-family: "Poppins", sans-serif;
+    opacity: 0.7;
+  }
+
+  h2 {
+    font-family: "Open Sans Condensed", sans-serif;
+    font-size: 4em;
+    opacity: 0.8;
+  }
+
+  .botoncontacto {
+    font-family: "Open Sans Condensed", sans-serif;
+    letter-spacing: 0.1em;
+    font-size: 1em;
+    border: none;
+    width: 8em;
+    border-radius: 1em;
+    background-color: $color;
+    margin-bottom: 1em;
+    color: #000;
+    border: none;
+    transition: all 0.3s ease 0s;
+    outline: none;
+  }
+
+  a {
+    color: black;
+    margin-bottom: 2em;
+    margin-left: 0.1em;
+    margin-right: 0.7em;
+    font-size: $medidaminima;
+    opacity: 0.8;
+  }
+}
+
+.form1 {
+  font-family: "Open Sans Condensed", sans-serif;
+  font-size: 1em;
+}
+
+.texto_quiensoy {
+  text-align: center;
+  opacity: 0.8;
+  font-family: "Poppins", sans-serif;
+  color: black;
+  font-size: 3em;
+}
+
+.descripcion_quiensoy {
+  font-family: "Open Sans Condensed", sans-serif;
+  font-size: 1.3em;
+  color: black;
+}
+
+.proyecto {
+  font-family: "Poppins", sans-serif;
+  font-size: 3em;
+  font-weight: lighter;
+  margin-top: 1em;
+  color: black;
+  opacity: 0.8;
+}
+
+hr {
+  color: black;
+  width: 10em;
+  height: 1em;
+  margin-bottom: 2em;
+}
+
+.letrav {
+  color: $color;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 900px) {
+  body {
+    margin: 0em;
+  }
+
+  .navbar a {
+    color: black;
+    font-size: 0.9em;
+  }
+
+  .navbar {
+    font-family: "Open Sans Condensed", sans-serif;
+    font-size: 1.5em;
+    background-color: transparent !important;
+    padding: 4px;
+  }
+
+  .texto_quiensoy {
+    text-align: center;
+    opacity: 0.8;
+    font-family: "Poppins", sans-serif;
+    color: black;
+    font-size: 2.5em;
+  }
+
+  .banner {
+    margin: 0%;
+    font-size: 0.6em;
+    padding: em 0;
+    background-position: left;
+    height: 100%;
+    object-position: center center;
+    width: 100%;
+    height: 400px;
+
+    .banner_titulo {
+      font-size: 4em;
+      background-color: white;
+      opacity: 0.7;
+    }
+
+    .banner_subtitulo {
+      background-color: white;
+      opacity: 0.7;
+    }
+
+    .banner_button {
+      margin-top: 1em;
+      font-size: 2em;
+    }
+  }
+
+  .footer {
+    position: absolute;
+    bottom: 0;
+  }
+
+  .gallery {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%;
+  }
+
+  .btn.filter {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .imagenHabilidad {
+    width: 6em;
+    height: 6em;
+    color: gray;
+    margin-top: 2em;
+  }
+  .row text-center {
+    padding-top: 10em;
+  }
+
+  .form {
+    font-family: "Open Sans Condensed", sans-serif;
+    font-size: 1.7em;
+
+    .formdatos {
+      font-size: 1em;
+      font-family: "Poppins", sans-serif;
+      opacity: 0.7;
+    }
+
+    h2 {
+      font-family: "Open Sans Condensed", sans-serif;
+      font-size: 2em;
+      opacity: 0.8;
+    }
+
+    .botoncontacto {
+      font-family: "Open Sans Condensed", sans-serif;
+      letter-spacing: 0.1em;
+      font-size: 1em;
+      border: none;
+      width: 8em;
+      border-radius: 1em;
+      background-color: $color;
+      margin-bottom: 1em;
+      color: #000;
+      border: none;
+      transition: all 0.3s ease 0s;
+      outline: none;
+    }
+
+    a {
+      color: black;
+      margin-bottom: 2em;
+      margin-left: 0.1em;
+      margin-right: 0.7em;
+      font-size: $medidaminima;
+      opacity: 0.8;
+    }
+  }
+
+  .form1 {
+    font-family: "Open Sans Condensed", sans-serif;
+    font-size: 1em;
+  }
+
+  .tituloportfolio {
+    margin-top: 4em;
     padding: 0em;
     background-color: white;
     display: inline-block;
     border-radius: 1em;
+  }
 }
 
-span {
-    img {
-        width: 22em;
-        height: 15em;
-    }
-
-    img:hover {
-        filter: opacity(.5);
-    }
-
+.listahabilidades {
+  margin-bottom: 12em;
 }
 
-.iconoservicios {
-    font-size: 5em;
-    color: sandybrown;
-    margin-top: 1.5em;
-    margin-bottom: 0.5em;
+.footer1 {
+  position: relative;
+  height: 100px;
+  bottom: 0;
+  width: 100%;
 }
 
-.imagenHabilidad {
-    padding: 1.2em;
-    width: 15em;
-    height: 13em;
-    -webkit-transition: 1s linear;
-    transition: 1s linear;
-    -webkit-box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
-    box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
-    transition-property: background-color, border-radius;
-    transition-duration: 1s;
-}
+@media screen and (min-width: 320px) and (max-width: 667px) {
+  .banner {
+    height: 500px;
+  }
 
-.habilidades1 {
-    font-family: 'Open Sans Condensed', sans-serif;
-    color: black;
-    opacity: 0.7;
-    font-weight: bold;
-}
-
-.imagenHabilidad:hover {
-    border-radius: 75px;
-    background-color: gray;
-}
-
-.habilidades {
-    font-size: 2.6em;
-    margin: 0%;
-    margin-top: 1em;
-    color: black !important;
-    font-family: 'Poppins', sans-serif;
-    opacity: 0.8;
-    font-weight: lighter;
-}
-
-.gallery {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-    -webkit-column-width: 33%;
-    -moz-column-width: 33%;
-    column-width: 33%;
-}
-
-.gallery .pics {
-    -webkit-transition: all 350ms ease;
-    transition: all 350ms ease;
-}
-
-.gallery .animation {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-}
-
-.img-fluid {
-    margin-top: 5em;
-}
-
-footer {
-    float: none;
-    font-size: 0.8em;
-    text-align: center;
-    align-items: center;
-    background: papayawhip;
-    color: black;
+  .tituloportfolio {
+    margin-top: 0em;
+    padding: 0.5em;
     background-color: white;
+    display: inline-block;
+    border-radius: 1em;
+  }
+}
+
+@media screen and (min-device-width: 768px) and (max-device-width: 1366px) {
+  body {
+    padding: 2em;
+  }
+  .banner {
+    margin: 0%;
+    font-size: 0.6em;
+    padding: em 0;
+    background-position: left;
+    height: 100%;
+    object-position: center center;
     width: 100%;
-    height: 5em;
-    bottom: 0;
-    left: 0;
+    height: 850px;
+  }
 
-    .iconofooter {
-        font-size: 2em;
-        color: gray;
-        margin-top: 0em;
-    }
+  .tituloportfolio {
+    margin-top: 9em;
+    padding: 4em;
+    background-color: white;
+    display: inline-block;
+    border-radius: 1em;
+  }
 }
 
-.form {
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 1.4em;
-
-    .formdatos {
-        font-size: 1.4em;
-        font-family: 'Poppins', sans-serif;
-        opacity: 0.7;
-    }
-
-    h2 {
-        font-family: 'Open Sans Condensed', sans-serif;
-        font-size: 4em;
-        opacity: 0.8;
-    }
-
-    .botoncontacto {
-        font-family: 'Open Sans Condensed', sans-serif;
-        letter-spacing: 0.1em;
-        font-size: 1em;
-        border: none;
-        width: 8em;
-        border-radius: 1em;
-        background-color: $color;
-        margin-bottom: 1em;
-        color: #000;
-        border: none;
-        transition: all 0.3s ease 0s;
-        outline: none;
-        margin-top: 1em;
-    }
+.listahabilidades {
+  padding-top: 0.5em;
 }
 
-.texto_quiensoy {
-    text-align: center;
-    opacity: 0.8;
-    font-family: 'Poppins', sans-serif;
-    color: black;
-    font-size: 3em;
-}
+@media screen and (min-device-width: 1024px) and (max-device-width: 1366px) {
+  body {
+    padding: 2em;
+  }
 
-.descripcion_quiensoy {
+  .imagensobremi {
+    font-size: 1.5rem;
+    font-weight: 400;
+    line-height: 1.5;
+  }
 
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: 1.3em;
-    color: black;
-}
+  .banner {
+    margin: 0%;
+    font-size: 0.6em;
+    padding: em 0;
+    background-position: left;
+    height: 100%;
+    object-position: center center;
+    width: 100%;
+    height: 1150px;
 
-.proyecto {
-    font-family: 'Poppins', sans-serif;
-    font-size: 3em;
-    font-weight: lighter;
-    margin-top: 1em;
-    color: black;
-    opacity: 0.8;
-}
-
-hr {
-    color: black;
-    width: 10em;
-    height: 1em;
-    margin-bottom: 2em;
-}
-
-.letrav {
-    color: $color;
-    font-weight: bold;
-}
-
-@media screen and (max-width: 800px) {
-
-    body {
-        margin: 0;
+    .banner_titulo {
+      font-size: 6.1em;
     }
 
-    .banner {
-        margin: 0%;
-        font-size: 0.6em;
-        padding: em 0;
-        background-position: left;
-
-        .banner_titulo {
-            font-size: 6em;
-            background-color: white;
-            opacity: 0.7;
-        }
-
-        .banner_subtitulo {
-            background-color: white;
-            opacity: 0.7;
-        }
-
-        .banner_button {
-            margin-top: 1em;
-            font-size: 2em;
-        }
+    .banner_subtitulo {
+      font-size: 3em;
     }
 
-    .footer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
+    .banner_button {
+      font-size: 3em;
     }
+  }
+  .tituloportfolio {
+    margin-top: 13em;
+    padding: 2em;
+    background-color: white;
+    display: inline-block;
+    border-radius: 1em;
+    font-size: 1em;
+  }
+}
 
-    .gallery {
-        -webkit-column-count: 1;
-        -moz-column-count: 1;
-        column-count: 1;
-        -webkit-column-width: 100%;
-        -moz-column-width: 100%;
-        column-width: 100%;
-    }
+@media screen and (min-device-width: 1700px) and (max-device-width: 1800px) {
+  .banner {
+    margin: 0%;
+    font-size: 0.6em;
+    padding: 17em 0;
+    background-position: left;
+    height: 100%;
+    object-position: center center;
+    width: 100%;
+  }
 
-    .btn.filter {
-        padding-left: 1.1rem;
-        padding-right: 1.1rem;
-    }
+  .listahabilidades {
+    padding-top: 3em;
+  }
+}
 
+@media screen and (min-device-width: 375px) and (max-device-width: 736px) {
+  .banner {
+    margin: 0%;
+    font-size: 0.6em;
+    padding: 17em 0;
+    background-position: left;
+    height: 100%;
+    object-position: center center;
+    width: 100%;
+    height: 669px;
+  }
+
+  .listahabilidades {
+    padding-top: 3em;
+  }
 }
