--- a/views/habilidades.html
+++ b/views/habilidades.html
@@ -2,109 +2,111 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Keywords" lang="es"
-        content="diseño web, diseno web, portafolio web, portfolio, website design, responsive design, frontend, diseño de interfaces, diseño UI, diseño UX, maquetacion web, CSS3, FIGMA, JAVASCRIPT" />
-    <meta name="description" lang="es"
-        content="Evelyn Bonato - Diseñadora web, conocimientos en Html, css, javascript, sass, figma, diseño de interfaces interactivas.  Responsabilidad y formacion constante." />
-    <title> Evelyn - Diseñadora Web</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Staatliches&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-    </script>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Recursive&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/41f3ad639c.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="Keywords" lang="es"
+    content="diseño web, diseno web, portafolio web, portfolio, website design, responsive design, frontend, diseño de interfaces, diseño UI, diseño UX, maquetación web, CSS3, FIGMA, JAVASCRIPT" />
+  <meta name="description" lang="es"
+    content="Evelyn Bonato - Diseñadora web, conocimientos en Html, css, javascript, sass, figma, diseño de interfaces interactivas.  Responsabilidad y  formación constante." />
+  <title>Evelyn - Diseñadora Web</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Staatliches&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Recursive&display=swap"
+    rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/41f3ad639c.js" crossorigin="anonymous"></script>
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon.png">
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 
-
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <h2 class="nombre_logo"> e<span class="letrav">v</span>elyn<span class="letrav">.</span></h2>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link mr-md-3 letra" href="./sobremi.html">Sobre mí</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link mr-md-3 letra" href="./habilidades.html">Habilidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link mr-md-3 letra" href="./mistrabajos.html">Mis trabajos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link mr-md-3 letra" href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </div>
-        <a class="d-none d-md-block" href="#"><i class="fab fa-behance"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-instagram"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-github"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-linkedin"></i></a>
-    </nav>
-
-
-    <h1 class="text-muted habilidades" style="text-align: center;">Habilidades técnicas</h1>
-    <hr>
-    <div class="row text-center">
-        <div class="col-md-4">
-            <img class="imagenHabilidad mt-5" src="../img/js.png" class="card-img-top" alt="...">
-            <h4 class="my-3 habilidades1">JavaScript</h4>
-        </div>
-        <div class="col-md-4">
-            <img class="imagenHabilidad mt-5" src="../img/react.png" class="card-img-top" alt="...">
-            <h4 class="my-3 habilidades1">React</h4>
-        </div>
-        <div class="col-md-4">
-            <img class="imagenHabilidad mt-5" src="../img/sass.png" class="card-img-top" alt="...">
-            <h4 class="my-3 habilidades1">Sass</h4>
-        </div>
-        <div class="col-md-4">
-            <img class="imagenHabilidad mt-5" src="../img/figma.png" class="card-img-top" alt="...">
-            <h4 class="my-3 habilidades1">Figma</h4>
-        </div>
-        <div class="col-md-4">
-            <img class="imagenHabilidad mt-5" src="../img/wordpress.png" class="card-img-top" alt="...">
-            <h4 class="my-3 habilidades1">Wordpress</h4>
-        </div>
-        <div class="col-md-4">
-            <img class="imagenHabilidad mt-5" src="../img/bootstrap.png" class="card-img-top" alt="...">
-            <h4 class="my-3 habilidades1">Bootstrap</h4>
-        </div>
+  <nav class="navbar navbar-expand-xl navbar-light bg-light">
+    <a class="navbar-brand" href="./../index.html">
+      <h2 class="nombre_logo">
+        e<span class="letrav">v</span>elyn<span class="letrav">.</span>
+      </h2>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mx-auto">
+        <li id="home" class="nav-item">
+          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li id="sobre_mi" class="nav-item">
+          <a class="nav-item nav-link mr-md-3 letra" href="./sobremi.html">Sobre mí</a>
+        </li>
+        <li id="habilidades" class="nav-item active">
+          <a class="nav-item nav-link mr-md-3 letra" href="./habilidades.html">Habilidades</a>
+        </li>
+        <li id="mis_trabajos" class="nav-item">
+          <a class="nav-item nav-link mr-md-3 letra" href="./mistrabajos.html">Mis trabajos</a>
+        </li>
+        <li id="contacto" class="nav-item">
+          <a class="nav-item nav-link mr-md-3 letra" href="./contacto.html">Contacto</a>
+        </li>
+      </ul>
     </div>
-    <footer class="mt-5">
+    <a class="d-none d-xl-block" href="https://www.behance.net/" target="_blank"><i class="fab fa-behance"></i></a>
+    <a class="d-none d-xl-block" href="https://www.instagram.com/evebonato/" target="_blank"><i
+        class="fa fa-instagram"></i></a>
+    <a class="d-none d-xl-block" href="https://github.com/evebonato" target="_blank"><i class="fa fa-github"></i></a>
+    <a class="d-none d-xl-block" href="https://www.linkedin.com/in/evelyn-bonato-4246042a/" target="_blank"><i
+        class="fa fa-linkedin"></i></a>
+  </nav>
 
-        <div class="row">
-            <div class="footer-copyright text-center py-3 col-lg-12 col-md-12"> © 2020 Hecho por Evelyn <i
-                    class="fas fa-heart"></i>
-            </div>
-        </div>
+  <h1 class="text-muted habilidades" style="text-align: center">
+    Habilidades técnicas
+  </h1>
+  <hr />
+  <div class="row listahabilidades text-center">
+    <div class=" col-lg-4  col-xl-2 ">
+      <span class="iconify imagenHabilidad" data-icon="ion:logo-javascript" data-inline="false"></span>
+      <h4 class="my-3 habilidades1">JavaScript</h4>
+    </div>
+    <div class="col-lg-4 col-xl-2 ">
+      <span class="iconify imagenHabilidad" data-icon="fa-brands:react" data-inline="false"></span>
+      <h4 class="my-3 habilidades1">React</h4>
+    </div>
+    <div class="col-lg-4 col-xl-2 ">
+      <span class="iconify imagenHabilidad" data-icon="cib:sass-alt" data-inline="false"></span>
+      <h4 class="my-3 habilidades1">Sass</h4>
+    </div>
+    <div class="col-lg-4 col-xl-2 ">
+      <span class="iconify imagenHabilidad" data-icon="fa-brands:figma" data-inline="false"></span>
+      <h4 class="my-3 habilidades1">Figma</h4>
+    </div>
+    <div class="col-lg-4 col-xl-2">
+      <span class="iconify imagenHabilidad" data-icon="cib:wordpress" data-inline="false"></span>
+      <h4 class="my-3 habilidades1">Wordpress</h4>
+    </div>
+    <div class="col-lg-4 col-xl-2 ">
+      <span class="iconify imagenHabilidad" data-icon="bi:bootstrap" data-inline="false"></span>
+      <h4 class="my-3 habilidades1">Bootstrap</h4>
+    </div>
+  </div>
+  <footer id="sticky-footer" class="py-4 bg-white text-black-100">
+    <div class="container text-center">
+      <large> © 2020 Hecho por Evelyn<i class="fas fa-heart"></i></large>
+    </div>
+  </footer>
 
-    </footer>
 </body>
 
 </html>
