--- a/views/sobremi.html
+++ b/views/sobremi.html
@@ -2,110 +2,110 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Keywords" lang="es"
-        content="diseño web, diseno web, portafolio web, portfolio, website design, responsive design, frontend, diseño de interfaces, diseño UI, diseño UX, maquetacion web, CSS3, FIGMA, JAVASCRIPT" />
-    <meta name="description" lang="es"
-        content="Evelyn Bonato - Diseñadora web, conocimientos en Html, css, javascript, sass, figma, diseño de interfaces interactivas.  Responsabilidad y formacion constante." />
-    <title> Evelyn - Diseñadora Web</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Staatliches&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-    </script>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Recursive&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/41f3ad639c.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Recursive&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="Keywords" lang="es"
+    content="diseño web, diseno web, portafolio web, portfolio, website design, responsive design, frontend, diseño de interfaces, diseño UI, diseño UX, maquetación web, CSS3, FIGMA, JAVASCRIPT" />
+  <meta name="description" lang="es"
+    content="Evelyn Bonato - Diseñadora web, conocimientos en Html, css, javascript, sass, figma, diseño de interfaces interactivas.  Responsabilidad y  formación constante." />
+  <title>Evelyn - Diseñadora Web</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Staatliches&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
+
+  <script src="https://kit.fontawesome.com/41f3ad639c.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Recursive&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon.png">
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <h2 class="nombre_logo"> e<span class="letrav">v</span>elyn<span class="letrav">.</span></h2>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mx-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link mr-md-3 letra" href="./sobremi.html">Sobre mí</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link mr-md-3 letra" href="./habilidades.html">Habilidades</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link mr-md-3 letra" href="./mistrabajos.html">Mis trabajos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link mr-md-3 letra" href="./contacto.html">Contacto</a>
-                </li>
-            </ul>
+  <nav class="navbar navbar-expand-xl navbar-light bg-light">
+    <a class="navbar-brand" href="./../index.html">
+      <h2 class="nombre_logo">
+        e<span class="letrav">v</span>elyn<span class="letrav">.</span>
+      </h2>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mx-auto">
+        <li id="home" class="nav-item">
+          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li id="sobre_mi" class="nav-item active">
+          <a class="nav-item nav-link mr-md-3 letra" href="./sobremi.html">Sobre mí</a>
+        </li>
+        <li id="habilidades" class="nav-item">
+          <a class="nav-item nav-link mr-md-3 letra" href="./habilidades.html">Habilidades</a>
+        </li>
+        <li id="mis_trabajos" class="nav-item">
+          <a class="nav-item nav-link mr-md-3 letra" href="./mistrabajos.html">Mis trabajos</a>
+        </li>
+        <li id="contacto" class="nav-item">
+          <a class="nav-item nav-link mr-md-3 letra" href="./contacto.html">Contacto</a>
+        </li>
+      </ul>
+    </div>
+    <a class="d-none d-xl-block" href="https://www.behance.net/" target="_blank"><i class="fab fa-behance"></i></a>
+    <a class="d-none d-xl-block" href="https://www.instagram.com/evebonato/" target="_blank"><i
+        class="fa fa-instagram"></i></a>
+    <a class="d-none d-xl-block" href="https://github.com/evebonato" target="_blank"><i class="fa fa-github"></i></a>
+    <a class="d-none d-xl-block" href="https://www.linkedin.com/in/evelyn-bonato-4246042a/" target="_blank"><i
+        class="fa fa-linkedin"></i></a>
+  </nav>
+
+  <section>
+    <div class="container">
+
+      <div class="row align-items-center">
+        <div class="col-lg-6 order-lg-2">
+          <div class="mt-5">
+            <img class="img-fluid imagensobremi" src="../img/imagenperfil.png" alt="" />
+          </div>
         </div>
-        <a class="d-none d-md-block" href="#"><i class="fab fa-behance"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-instagram"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-github"></i></a>
-        <a class="d-none d-md-block" href="#"><i class="fa fa-linkedin"></i></a>
-    </nav>
+        <div class="col-lg-6">
+          <div class="p-5">
+            <h1 class="display-4 texto_quiensoy">¿Quién soy?</h1>
+            <p class="descripcion_quiensoy mt-3">
+              Me llamo Evelyn, soy Argentina, nacida en Entre Ríos. Me
+              considero una persona comprometida en la mejora continua y en la
+              creación de experiencias dinámicas y accesibles.
+              Constantemente estoy formándome y capacitándome en
+              las últimas tendencias para poder brindar el mejor servicio.
+            </p>
 
-    <section>
-        <div class="container">
-            <div class="row align-items-center">
-
-                <div class="col-lg-6">
-                    <div class="p-5">
-                        <h1 class="display-4 texto_quiensoy">¿Quien soy?</h1>
-                        <p class="descripcion_quiensoy mt-3">Me llamo Evelyn, soy Argentina , nacida en Entre
-                            Rios.
-                            Me considero una persona comprometida en la mejora continua y en la creacion de experiencias
-                            de usuarios dinamicas y
-                            accesibles.
-                            Siempre dispuesta a nuevos desafios y ser resolutiva es mi mayor
-                            propósito. Constantemente
-                            estoy
-                            formandome y capacitandome en las ultimas tendencias para poder brindar las mejores
-                            herramientas en mi trabajo.</p>
-
-                        <p class="descripcion_quiensoy">Contactame y hagamos algo especial. </p>
-                    </div>
-                </div>
-                <div class="col-lg-6 order-lg-2">
-                    <div>
-                        <img class="img-fluid imagensobremi" src="../img/imagenperfil.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer class="mt-5">
-
-        <div class="row">
-            <div class="footer-copyright text-center py-3 col-lg-12 col-md-12"> © 2020 Hecho por Evelyn <i
-                    class="fas fa-heart"></i>
-            </div>
+            <p class="descripcion_quiensoy">
+              Contactame y hagamos algo especial.
+            </p>
+          </div>
         </div>
 
-    </footer>
+      </div>
+    </div>
+  </section>
+  <footer id="fixed-footer" class="py-4 bg-white text-black-100 footer1">
+    <div class="container text-center">
+      <large> © 2020 Hecho por Evelyn<i class="fas fa-heart"></i></large>
+    </div>
+  </footer>
+
 </body>
 
 </html>
